# od-draw

./: .gitignore  ADAPTING_FROM_DRAWPYO.md  CONFIG.md  CONTEXT.md  Makefile  OD_DRAW_API.md  README.md  SVG_DRAWIO_STRATEGY.md  pyproject.toml
docs/: api.rst  conf.py  configuration.rst  index.rst  installation.rst  quickstart.rst
examples/: basics.py  simple_diagram.py
src/od_draw/: __init__.py  cli.py  colors.py  config.py  types.py
src/od_draw/diagram/: __init__.py  base.py
src/od_draw/diagram/backends/: __init__.py  base.py  drawio.py  png.py  svg.py
src/od_draw/drawio/: __init__.py  file.py  geometry.py  object.py  page.py  xml_base.py
src/od_draw/shapes/: __init__.py  base.py  circle.py  factory.py  line.py  polygon.py
tests/: test_diagram.py  test_shapes.py
